gcc/testsuite/rust/rustc/ui/issues/issue-17458.rs
static X: usize = unsafe { core::ptr::null::<usize>() as usize };
// { dg-error ".E0658." "" { target *-*-* } .-1 }

fn main() {
    assert_eq!(X, 0);
}

